# horseman

./: .gitignore  ARCHITECTURE_REFACTOR.md  CLAUDE.md  Cargo.toml  DECISIONS.md  DIARY.md  FEATURE_PARITY.md  LICENSE  PLUGIN_SYSTEM_DESIGN.md  README.md  RULES.md  bun.lockb  components.json  install.sh  package-lock.json  package.json  release.sh  tsconfig.json
.github/workflows/: release.yml
horseman-mcp/: Cargo.toml
horseman-mcp/src/: main.rs
results/: image_input_findings.json
src/: App.tsx  constants.ts  main.tsx
src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  debug.rs  events.rs  lib.rs  main.rs
src-tauri/src/claude/: process.rs
src-tauri/src/commands/: claude.rs  diagnostics.rs  files.rs  hooks.rs  mod.rs  sessions.rs  slash.rs  status.rs
src-tauri/src/hooks/: mod.rs  server.rs  types.rs
src-tauri/src/slash/: mod.rs  pty.rs
src/components/: HelpModal.tsx  StatusModal.tsx
src/domain/: index.ts  message.ts  permission.ts  protocol.ts  question.ts  session.ts  todo.ts
src/hooks/: useClaudeStream.ts  useConversationSearch.ts  useHorsemanEvents.ts  useInputMenu.ts  usePreHighlight.ts  useSession.ts  useSlashCommand.ts  useUpdater.ts
tests/: test_01_stream_json_output.py  test_02_session_persistence.py  test_03_interruption.py  test_04_permission_events.py  test_05_image_input.py  test_06_hooks.py  test_followup.py  test_midstream_steering.py  test_slash_commands.py  test_stdin_queue.py
website/: bun.lockb  package.json
(+69 files in other folders)
