[package]
name = "horseman"
version = "0.1.0"
description = "A native macOS GUI for Claude Code"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "horseman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
libc = "0.2"
once_cell = "1.21.3"
chrono = "0.4.43"
ignore = "0.4"
portable-pty = "0.9"
toml = "0.8"

